lettle spacing, fixed

--- a/src/assets/scss/main/layout/_header.scss
+++ b/src/assets/scss/main/layout/_header.scss
@@ -53,6 +53,9 @@
             margin-left: 1.225em;
         }
     }
+    &-logo {
+        margin-left: 105px;
+    }
     &-topbar {
         background: $black;
         color: $font-color;
